--- a/app/Resources/views/home/estudiante.html.twig
+++ b/app/Resources/views/home/estudiante.html.twig
@@ -20,19 +20,15 @@
         <div class="col-xs-12">
           <!-- small box -->
           <div class="small-box bg-yellow">
+            <a href="{{ path('estudiante_show', { 'id': contenido['estudiante_id'] }) }}" class="small-box-footer">
             <div class="inner">
               <h3>{{ contenido['estudiantes'] }}</h3>
-
               <p>Mi Perfil</p>
             </div>
             <div class="icon">
               <i class="ion ion-person"></i>
             </div>
-            <a href="{% if is_granted('ROLE_ESTUDIANTE') %}
-              {{ path('estudiante_show', { 'id': contenido['estudiante_id'] }) }}
-            {% else %}
-              {{ path('estudiante_index')}}
-            {% endif %}" class="small-box-footer">Ir <i class="fa fa-arrow-circle-right"></i></a>
+              <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
