--- a/app/Resources/views/tema/index.html.twig
+++ b/app/Resources/views/tema/index.html.twig
@@ -9,6 +9,7 @@
     <section class="content">
         <!-- general form elements -->
         <div class="box box-primary">
+    <div class="alert alert-info" role="alert"><strong>Arbol Tematico: </strong> Se presentan los temas disponibles, indicando sus prelaciones entre los otros temas.</div>
             <div class="box-body" style="overflow:auto;">
                 <svg id="svg-canvas" width="960" height="600"></svg>
             </div>
@@ -32,7 +33,7 @@
         // Here we"re setting nodeclass, which is used by our custom drawNodes function
         // below.
         {% for tema in temas %}
-            g.setNode({{ tema.id }},  { labelType:"html", label: "<a href=\"{{ path('tema_show', { 'id': tema.id }) }}\">{{tema}}</a>", class: "type-TOP" });
+            g.setNode({{ tema.id }},  { labelType:"html", label: "<a href=\"{{ path('tema_show', { 'id': tema.id }) }}\" class=\"btn btn-primary\"><span>{{tema}}</span></a>", class: "type-TOP" });
         {% endfor %}
         
         g.nodes().forEach(function(v) {
