--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
+{% spaceless %}
 <html>
     <head>
         <noscript>
-            <p class="alert alert-danger">
-                Javascript está deshabilitado en su navegador web. Por favor, para ver correctamente este sitio, <b><i>habilite javascript</i></b>. Para ver las instrucciones para habilitar javascript en su navegador, haga click <a href="http://www.enable-javascript.com/es/" target="_blank">aquí</a>.
-            </p>
+            <p class="alert alert-danger">Javascript está deshabilitado en su navegador web. Por favor, para ver correctamente este sitio, <b><i>habilite javascript</i></b>. Para ver las instrucciones para habilitar javascript en su navegador, haga click <a href="http://www.enable-javascript.com/es/" target="_blank">aquí</a>.</p>
         </noscript>
         <meta charset="UTF-8" />
         <title>{% block title %}Bienvenido!{% endblock %}</title>
         {% block stylesheets %}
-            <script type='text/javascript'>
-            window.onload = detectarCarga;
-            function detectarCarga(){
-              document.getElementById("imgLOAD").style.display="none";
-              document.getElementById("body").style.visibility = "visible";
-            }
-            </script>
+            <script type='text/javascript'>window.onload = detectarCarga;function detectarCarga(){document.getElementById("imgLOAD").style.display="none";document.getElementById("body").style.visibility = "visible";}</script>
             <link rel="stylesheet" href="{{ asset('bundles/app/bootstrap/css/bootstrap.min.css')}}">
             <link href="{{ asset('bundles/app/css/font-awesome.min.css') }}" type="text/css" rel="stylesheet"/>
             <link href="{{ asset('bundles/app/plugins/angular-loading-bar/loading-bar.min.css') }}" type="text/css" rel="stylesheet" />
@@ -24,8 +17,7 @@
             <link rel="stylesheet" href="{{ asset('bundles/app/css/ionicons.min.css') }}">
             <!-- Theme style -->
             <link rel="stylesheet" href="{{ asset('bundles/app/dist/css/AdminLTE.min.css')}}">
-            <!-- AdminLTE Skins. Choose a skin from the css/skins
-                 folder instead of downloading all of them to reduce the load. -->
+            <!-- AdminLTE Skins. Choose a skin from the css/skins folder instead of downloading all of them to reduce the load. -->
             <link rel="stylesheet" href="{{ asset('bundles/app/dist/css/skins/_all-skins.min.css')}}">
             <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
             <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,20 +25,16 @@
                 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
                 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
             <![endif]-->
-            <style type="text/css">
-                @media screen and (max-width: 767px) {.select2 {width: 100% !important;}}
-            </style>
+            <style type="text/css">@media screen and (max-width: 767px) {.select2 {width: 100% !important;}}</style>
         {% endblock %}        
     </head>
     <body ng-app="AppModule" class="hold-transition skin-blue layout-top-nav" ng-controller="LoadCtrl">
         <div id="imgLOAD" style="text-align:center;position:absolute;top:0;bottom:0;left:0;right:0;height:20%;margin: auto;">
             <h3>Cargando...</h3>
-            <div style="margin:auto;width:24px;height:24px;border:solid 2px transparent;border-top-color:  #29d;border-left-color:#29d;border-radius:50%;-webkit-animation: loading-bar-spinner 400ms linear infinite;-moz-animation: loading-bar-spinner 400ms linear infinite;-ms-animation: loading-bar-spinner 400ms linear infinite;-o-animation:      loading-bar-spinner 400ms linear infinite;animation: loading-bar-spinner 400ms linear infinite;"></div>
+            <div style="margin:auto;width:24px;height:24px;border:solid 2px transparent;border-top-color:  #29d;border-left-color:#29d;border-radius:50%;-webkit-animation: loading-bar-spinner 400ms linear infinite;-moz-animation: loading-bar-spinner 400ms linear infinite;-ms-animation: loading-bar-spinner 400ms linear infinite;-o-animation: loading-bar-spinner 400ms linear infinite;animation: loading-bar-spinner 400ms linear infinite;"></div>
         </div>
             {% include 'header.html.twig' %}
         <div id="body" class="wrapper" style="visibility: hidden;">
-            
-            
             <!-- Content Wrapper. Contains page content -->
             <div class="content-wrapper">
                 <div class="container">
@@ -82,3 +70,4 @@
         {% endblock %} 
     </body>
 </html>
+{% endspaceless %}
