--- a/app/Resources/views/estudiante/show.html.twig
+++ b/app/Resources/views/estudiante/show.html.twig
@@ -7,29 +7,13 @@
         <h1>Perfil</h1>
     </section>
     <!-- Main content -->
-    <section class="content">
-        {% if is_granted('ROLE_ESTUDIANTE') or is_granted('ROLE_PROFESOR') %}
-      <div class="box-body">
-        <div class="col-xs-12">
-          <!-- AREA CHART -->
-          <div class="box box-primary">
-            <div class="box-header with-border">
-              <h3 class="box-title">Progreso</h3>
-            </div>
-            <div class="box-body">
-              <div class="chart">
-                <canvas id="areaChart" style="height:250px"></canvas>
-              </div>
-            </div>
-            <!-- /.box-body -->
-          </div>
-        </div>
-      </div>
-      {% endif %}
+    <section class="content" ng-controller="showEstudianteController">
+        
                         <!-- /.box-body -->
         <div class="nav-tabs-custom">
             <ul class="nav nav-tabs">
                 <li class="active"><a href="#datos" data-toggle="tab">Datos</a></li>
+                <li><a href="#progreso" data-toggle="tab">Progreso</a></li>
                 {#<li><a href="#settings" data-toggle="tab">Settings</a></li>#}
                 {% if is_granted('ROLE_VERIFICADOR') and verify_form is defined %}
                 <li style="float: right;background:rgba(34,34,34,0.5);">
@@ -57,10 +41,10 @@
                                   <b>Usuario</b> <a class="pull-right" href="{{ path('user_show', { id: estudiante.usuario.id }) }}">{{ estudiante.usuario.username }}</a>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>Cédula</b> <a class="pull-right"> {{ estudiante.cedula }}</a>
+                                  <b>Cédula</b> <span class="pull-right"> {{ estudiante.cedula }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>Genero</b> <a class="pull-right"> {% if estudiante.genero %}Masculino{% else %}Femenino{% endif %}</a>
+                                  <b>Genero</b> <span class="pull-right"> {% if estudiante.genero %}Masculino{% else %}Femenino{% endif %}</span>
                                 </li>
                                 <li class="list-group-item">
                                   <b>Credenciales</b> <a class="pull-right" href="{{ asset('uploads/credenciales/' ~ estudiante.credencial ) }}" target="_blank" > Abrir archivo</a>
@@ -70,10 +54,10 @@
                                 </li>
                                 {#
                                 <li class="list-group-item">
-                                  <b>Último Acceso</b> <a class="pull-right">{% if estudiante.usuario.lastLogin %}{{ estudiante.usuario.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</a>
+                                  <b>Último Acceso</b> <span class="pull-right">{% if estudiante.usuario.lastLogin %}{{ estudiante.usuario.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>Friends</b> <a class="pull-right">13,287</a>
+                                  <b>Friends</b> <span class="pull-right">13,287</span>
                                 </li>
                                 #}
                             </ul>
@@ -81,10 +65,10 @@
                             <p class="text-muted text-center">Plantel</p>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                  <b>Tipo</b> <a class="pull-right">{{ CONST['TIPOS_PLANTEL'][estudiante.tipoPlantel] }}</a>
+                                  <b>Tipo</b> <span class="pull-right">{{ CONST['TIPOS_PLANTEL'][estudiante.tipoPlantel] }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>Gestión</b> <a class="pull-right">{{ CONST['GESTIONES_PLANTEL'][estudiante.gestionPlantel] }}</a>
+                                  <b>Gestión</b> <span class="pull-right">{{ CONST['GESTIONES_PLANTEL'][estudiante.gestionPlantel] }}</span>
                                 </li>
                             </ul>
                         </div><!-- /.datos basicos -->
@@ -96,25 +80,25 @@
                             <p class="text-muted text-center">Notas Matematicas</p>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                  <b>1er Año</b> <a class="pull-right">{{ estudiante.notaPrimero }}</a>
+                                  <b>1er Año</b> <span class="pull-right">{{ estudiante.notaPrimero }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>2do Año</b> <a class="pull-right">{{ estudiante.notaSegundo }}</a>
+                                  <b>2do Año</b> <span class="pull-right">{{ estudiante.notaSegundo }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>3er Año</b> <a class="pull-right">{{ estudiante.notaTercero }}</a>
+                                  <b>3er Año</b> <span class="pull-right">{{ estudiante.notaTercero }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>4to Año</b> <a class="pull-right">{{ estudiante.notaCuarto }}</a>
+                                  <b>4to Año</b> <span class="pull-right">{{ estudiante.notaCuarto }}</span>
                                 </li>
                             </ul>
                             <p class="text-muted text-center">Promedio</p>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                  <b>Total Cursadas</b> <a class="pull-right">{{ estudiante.cantMaterias }}</a>
+                                  <b>Total Cursadas</b> <span class="pull-right">{{ estudiante.cantMaterias }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>Promedio</b> <a class="pull-right">{{ estudiante.promedio }}</a>
+                                  <b>Promedio</b> <span class="pull-right">{{ estudiante.promedio }}</span>
                                 </li>
                             </ul>
                         </div><!-- /.box-body -->
@@ -125,13 +109,13 @@
                             <h3 class="profile-username text-center">Admisión</h3>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                  <b>OPSU</b> <a class="pull-right">{% if estudiante.esAsignadoOPSU %}Sí,{% else %}No{% endif %} asignado.</a>
+                                  <b>OPSU</b> <span class="pull-right">{% if estudiante.esAsignadoOPSU %}Sí,{% else %}No{% endif %} asignado.</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>1era Opción</b> <a class="pull-right">{{ CONST['CARRERAS'][estudiante.primeraOpcion] }}</a>
+                                  <b>1era Opción</b> <span class="pull-right">{{ CONST['CARRERAS'][estudiante.primeraOpcion] }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>2da Opción</b> <a class="pull-right">{{ CONST['CARRERAS'][estudiante.segundaOpcion] }}</a>
+                                  <b>2da Opción</b> <span class="pull-right">{{ CONST['CARRERAS'][estudiante.segundaOpcion] }}</span>
                                 </li>
                             </ul>
                         </div><!-- /.box-body -->
@@ -142,15 +126,21 @@
                             <h3 class="profile-username text-center">Socio-economicos</h3>
                             <ul class="list-group list-group-unbordered">
                                 <li class="list-group-item">
-                                  <b>Nivel</b> <a class="pull-right">{{ CONST['NIVELES_SOCIOECONOMICOS'][estudiante.nivelSocioeconomico] }}</a>
+                                  <b>Nivel</b> <span class="pull-right">{{ CONST['NIVELES_SOCIOECONOMICOS'][estudiante.nivelSocioeconomico] }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                  <b>Gestión</b> <a class="pull-right">{{ CONST['NIVELES_EDUCATIVOS'][estudiante.nivelEstudioPadres] }}</a>
                                 </li>
                             </ul>
                         </div><!-- /.box-body -->
                     </div><!-- /.socio-economicos -->
                 </div><!-- /.tab-pane datos-->
+                {% if is_granted('ROLE_ESTUDIANTE') or is_granted('ROLE_PROFESOR') %}
+                <div class="tab-pane" id="progreso">
+                  <span ng-if="practicaSelect" class="animate-if"><p><strong>Fecha:</strong>&nbsp;[[fechaPractica]],&nbsp;&nbsp;&nbsp;&nbsp;<strong>Dificultad:</strong>&nbsp;[[dificultadPractica]],&nbsp;&nbsp;&nbsp;&nbsp;<strong>Calificación:</strong>&nbsp;[[calificacionPractica]]%,&nbsp;&nbsp;&nbsp;&nbsp;<strong>Tema:</strong>&nbsp;[[temaPractica]],{% if is_granted('ROLE_PROFESOR') %}&nbsp;&nbsp;&nbsp;&nbsp;<a ng-href="urlPractica"><i class="fa fa-plus"></i>&nbsp;más detalles</a>{% endif %}</p></span>
+                  <div class="chart"><canvas height="40" width="100" id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick"></canvas></div>
+
+                </div>
+                {% endif %}
                 <div class="tab-pane" id="settings">
                    
                 </div><!-- /.tab-pane settings-->
@@ -162,111 +152,35 @@
             <a class="btn btn-warning btn-flat pull-right" href="{{ path('estudiante_edit', { 'id': estudiante.id }) }}"><i class="fa fa-edit"></i>&nbsp;Editar</a>
             {% endif %}
         </div>
-    </section><!-- /.content -->
 
+    </section><!-- /.content -->
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <style type="text/css">.animate-if {padding:10px;}.animate-if.ng-enter, .animate-if.ng-leave {transition:all cubic-bezier(0.250, 0.460, 0.450,.940) 0.5s;}.animate-if.ng-enter,.animate-if.ng-leave.ng-leave-active {  opacity:0;}.animate-if.ng-leave,.animate-if.ng-enter.ng-enter-active { opacity:1;}</style>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-
+    <script type="text/javascript">
+          var practicas = "{{ practicas|json_encode }}";
+          var div = document.createElement('div');
+          div.innerHTML = practicas;
+          practicas = div.firstChild.nodeValue;
+          practicas = JSON.parse(practicas);
+          console.log("practicas",practicas);
+    </script>
     <script src="{{ asset('bundles/app/plugins/jQuery/jQuery-2.2.0.min.js') }}" type="text/javascript"></script>
     <!-- ChartJS 1.0.1 -->
     <script src="{{ asset('bundles/app/plugins/chartjs/Chart.min.js') }}" type="text/javascript"></script>
-<script>
-  $(function () {
-    /* ChartJS
-     * -------
-     * Here we will create a few charts using ChartJS
-     */
+    <script src="{{ asset('bundles/app/plugins/angular-chart/angular-chart.min.js') }}" type="text/javascript"></script>
 
-    //--------------
-    //- AREA CHART -
-    //--------------
-
-    // Get context with jQuery - using jQuery's .get() method.
-    var areaChartCanvas = $("#areaChart").get(0).getContext("2d");
-    // This will get the first returned node in the jQuery collection.
-    var areaChart = new Chart(areaChartCanvas);
-
-    var areaChartData = {
-        labels: [
-        {% for item in estudiante.practicas %}
-            "{{ item.fin|date('m-d H:i') }}",
-        {% endfor %}
-        ],
-        datasets: [
-        {
-          label: "Practicas",
-          fillColor: "rgba(60,141,188,0.9)",
-          strokeColor: "rgba(60,141,188,0.8)",
-          pointColor: "#3b8bba",
-          pointStrokeColor: "rgba(60,141,188,1)",
-          pointHighlightFill: "#fff",
-          pointHighlightStroke: "rgba(60,141,188,1)",
-          data: [
-          {% for item in estudiante.practicas %}
-            {{ item.calificacion }},
-            {% endfor %}
-          ]
-        }
-      ]
-    };
-
-    var areaChartOptions = {
-      //Boolean - If we should show the scale at all
-      showScale: true,
-      //Boolean - Whether grid lines are shown across the chart
-      scaleShowGridLines: false,
-      //String - Colour of the grid lines
-      scaleGridLineColor: "rgba(0,0,0,.05)",
-      //Number - Width of the grid lines
-      scaleGridLineWidth: 1,
-      //Boolean - Whether to show horizontal lines (except X axis)
-      scaleShowHorizontalLines: true,
-      //Boolean - Whether to show vertical lines (except Y axis)
-      scaleShowVerticalLines: true,
-      //Boolean - Whether the line is curved between points
-      bezierCurve: true,
-      //Number - Tension of the bezier curve between points
-      bezierCurveTension: 0.3,
-      //Boolean - Whether to show a dot for each point
-      pointDot: false,
-      //Number - Radius of each point dot in pixels
-      pointDotRadius: 4,
-      //Number - Pixel width of point dot stroke
-      pointDotStrokeWidth: 1,
-      //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
-      pointHitDetectionRadius: 20,
-      //Boolean - Whether to show a stroke for datasets
-      datasetStroke: true,
-      //Number - Pixel width of dataset stroke
-      datasetStrokeWidth: 2,
-      //Boolean - Whether to fill the dataset with a color
-      datasetFill: true,
-      //String - A legend template
-      legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<datasets.length; i++){ %><li><span style=\"background-color:<%=datasets[i].lineColor%>\"></span><%if(datasets[i].label){ %><%=datasets[i].label%><% }%></li><% }%></ul>",
-      //Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
-      maintainAspectRatio: true,
-      //Boolean - whether to make the chart responsive to window resizing
-      responsive: true
-    };
-
-    //Create the line chart
-    areaChart.Line(areaChartData, areaChartOptions);
-
-    //-------------
-    //- LINE CHART -
-    //--------------
-    var lineChartCanvas = $("#lineChart").get(0).getContext("2d");
-    var lineChart = new Chart(lineChartCanvas);
-    var lineChartOptions = areaChartOptions;
-    lineChartOptions.datasetFill = false;
-    lineChart.Line(areaChartData, lineChartOptions); 
-
-  });
-</script>
     {% javascripts
-        '@AppBundle/Resources/public/angularjs/loadModule.js'%}
+        '@AppBundle/Resources/public/angularjs/Estudiante/showEstudianteModule.js'
+        '@AppBundle/Resources/public/angularjs/Estudiante/showEstudianteController.js' output='js/compiled/app.js' %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
+
+    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
 
 {% endblock %}
