--- a/app/Resources/views/practica/index.html.twig
+++ b/app/Resources/views/practica/index.html.twig
@@ -25,7 +25,7 @@
                             <td>{{ practica.calificacion }}</td>
                             <td>{% if practica.finalizada %}<span class="label label-warning pull-right">Finalizada</span>{% else %}<span class="label label-success pull-right">Iniciada</span>{% endif %}</td>
                             <td><a href="{{ path('estudiante_show', { 'id': practica.estudiante.id }) }}">{{ practica.estudiante.usuario.username}}</a></td>
-                            <td><a class="btn btn-default btn-flat" href="{{ path('practica_show', { 'id': practica.id }) }}"><i class="fa fa-eye"></i>&nbsp;Ver</a></td>
+                            <td><a class="btn btn-default btn-flat" href="{{ path('practica_show', { 'id': practica.id }) }}">Ver</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
