memoria de practicas

--- a/app/Resources/views/estudiante/show.html.twig
+++ b/app/Resources/views/estudiante/show.html.twig
@@ -129,6 +129,7 @@
                                   <b>Nivel</b> <span class="pull-right">{{ CONST['NIVELES_SOCIOECONOMICOS'][estudiante.nivelSocioeconomico] }}</span>
                                 </li>
                                 <li class="list-group-item">
+                                  <b>Nivel educativo de Padreo Madre</b><br><span>{{ CONST['NIVELES_EDUCATIVOS'][estudiante.nivelEstudioPadres] }}</span>
                                 </li>
                             </ul>
                         </div><!-- /.box-body -->
