--- a/app/Resources/views/home/estudiante.html.twig
+++ b/app/Resources/views/home/estudiante.html.twig
@@ -31,41 +31,45 @@
               <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
-        <!-- ./col -->
-        <div class="col-xs-12">
-          <!-- small box -->
-          <div class="small-box bg-green">
-            <div class="inner">
-              <h3>Progreso total<sup style="font-size: 20px">%</sup></h3>
-
-              <p>Progreso</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-stats-bars"></i>
-            </div>
-          </div>
-        </div>        
-        <!-- ./col -->
         <div class="col-xs-12">
           <!-- small box -->
           <div class="small-box bg-red">
+            <a href="{{ path('practica_generate') }}" class="small-box-footer">
             <div class="inner">
-              <h3>{{ contenido['practicas'] }}</h3>
-
-              <p>Practicas Realizadas</p>
+              <h3>Practicar</h3>
+              <p>Realizar nueva</p>
             </div>
             <div class="icon">
-              <i class="ion ion-ribbon-a"></i>
+              <i class="ion ion-play"></i>
             </div>
+              <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
-          <div class="col-xs-12" style="text-align: center;">
-            <a href="{{ path('practica_generate')}}" class="btn btn-app"><i style="color: green;"class="fa fa-play"></i> Practicar</a>
-          </div>
       </div>
     </section>
     <section class="content col-lg-8 col-md-8">
+      <div class="row">
+        
+      <div class="col-sm-6 col-xs-12">
+        <div class="info-box">
+          <span class="info-box-icon bg-green"><i class="ion ion-ribbon-a"></i></span>
+          <div class="info-box-content">
+            <span class="info-box-text">Practicas Realizadas</span>
+            <span class="info-box-number">{{ contenido['practicas'] }}</span>
+          </div><!-- /.info-box-content -->
+        </div><!-- /.info-box -->
+      </div>
+      <div class="col-sm-6 col-xs-12">
+        <div class="info-box">
+          <span class="info-box-icon bg-blue"><i class="ion ion-stats-bars"></i></span>
+          <div class="info-box-content">
+            <span class="info-box-text">Progreso total</span>
+            <span class="info-box-number">aqui va algo</span>
+          </div><!-- /.info-box-content -->
+        </div><!-- /.info-box -->
+      </div>
+      </div>
       <div class="box box-primary">
             <div class="box-body" style="overflow:auto;">
                 <svg id="svg-canvas" width="960" height="600"></svg>
