--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -76,7 +76,7 @@
                 <h3>{{ contenido['estudiantes'] }}</h3>
                 <p>{{ contenido['estudiantes_titulo'] }}</p>
               </div>
-              <div class="icon"><i class="ion ion-person"></i></div>
+              <div class="icon"><i class="ion ion-university"></i></div>
               Ir </a>
           </div>
         </div>
