--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -14,6 +14,13 @@
         {% if is_granted('ROLE_ADMIN') %}
         <li><a href="{{ path('users')}}"><i class="fa fa-users"></i> Usuarios</a></li>
         {% endif %}
+        {% if is_granted('ROLE_ESTUDIANTE') %}
+        <li><a href="{{ path('users')}}"><i class="ion ion-university"></i> Mi Perfil</a></li>
+        <li><a href="{{ path('practica_generate')}}"><i class="ion ion-play"></i> Practicar</a></li>
+        <li><p class="navbar-text navbar-right"><i class="ion ion-ribbon-a"></i> Practicas realizadas: {{ estudiante.practicas|length }}</p></li>
+        <li><p class="navbar-text navbar-right"><i class="ion ion-stats-bars"></i> Progreso actual: </p></li>
+        
+        {% endif %}
         {% if is_granted('ROLE_PROFESOR') %}
         <li><a href="{{ path('estudiante_index')}}"><i class="fa fa-graduation-cap"></i> Estudiantes</a></li>
         <li class="dropdown">
