--- a/app/Resources/views/tema/index.html.twig
+++ b/app/Resources/views/tema/index.html.twig
@@ -9,9 +9,9 @@
     <section class="content">
         <!-- general form elements -->
         <div class="box box-primary">
-    <div class="alert alert-info" role="alert"><strong>Arbol Tematico: </strong> Se presentan los temas disponibles, indicando sus prelaciones entre los otros temas.</div>
+            <div class="box-header"><h4><strong>Arbol Tematico: </strong> Se presentan los temas disponibles, indicando sus prelaciones entre los otros temas.</h4></div>
             <div class="box-body" style="overflow:auto;">
-                <svg id="svg-canvas" width="960" height="600"></svg>
+                <svg id="svg-canvas" width="100%" height="600"></svg>
             </div>
         </div>
     </section>
@@ -58,7 +58,7 @@
 
         // Run the renderer. This is what draws the final graph.
         render(d3.select("svg g"), g);
-
+        svg.attr("width", 900);
         // Center the graph
         var xCenterOffset = (svg.attr("width") - g.graph().width) / 2;
         svgGroup.attr("transform", "translate(" + xCenterOffset + ", 20)");
