--- a/app/Resources/views/home/estudiante.html.twig
+++ b/app/Resources/views/home/estudiante.html.twig
@@ -10,7 +10,9 @@
         Hola {{ estudiante.nombre }}
         <small>Control panel</small> 
       </h1>
-      <h4>Bienvenido a este, Tu sistema de ejercitamineto personalizado, para la mejora de tus habilidades en las matematicas</h4>
+      <h4>Bienvenido a este, Tu sistema de ejercitamineto personalizado, para la mejora de tus habilidades en las matematicas.
+      <p>¿Que es SAMPU?, es un Sistemas de Adiestramiento Matematico Pre Universitario, el cual cuenta con una Base de datos de ejercicios en distintos niveles de dificultad, el cual se adapta a tu nivel de conocimiento y te sugiere ejercicio que se adapten a tus necesidates y ayudarte a mejorar tus habilidades en la matematicas pre universitarias</p>
+      </h4>
   </section>
 
     <!-- Main content -->
