--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -26,10 +26,9 @@
         Dashboard
         <small>Control panel</small>
       </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">Dashboard</li>
-      </ol>
+      <h4><p>Bienvenido al sistema de adiestramiento personalizado, para la mejora de las habilidades en las matematicas de los estudiantes.</p>
+      <p>¿Que es SAMPU?, es un Sistemas de Adiestramiento Matematico Pre Universitario, el cual cuenta con muchos ejercicios en distintos niveles de dificultad y temas, el cual se adapta al nivel de conocimiento del estudiante y le sugiere ejercicios que se adapten a sus necesidates y ayudarle a mejorar sus habilidades en la matematicas pre universitarias</p>
+      </h4>
   </section>
   <!-- Main content -->
     <section class="content">
