--- a/app/Resources/views/home/estudiante.html.twig
+++ b/app/Resources/views/home/estudiante.html.twig
@@ -10,8 +10,8 @@
         Hola {{ estudiante.nombre }}
         <small>Control panel</small> 
       </h1>
-      <h4>Bienvenido a este, Tu sistema de ejercitamineto personalizado, para la mejora de tus habilidades en las matematicas.
-      <p>¿Que es SAMPU?, es un Sistemas de Adiestramiento Matematico Pre Universitario, el cual cuenta con una Base de datos de ejercicios en distintos niveles de dificultad, el cual se adapta a tu nivel de conocimiento y te sugiere ejercicio que se adapten a tus necesidates y ayudarte a mejorar tus habilidades en la matematicas pre universitarias</p>
+      <h4><p>Bienvenido al sistema de adiestramiento personalizado, para la mejora de tus habilidades en las matematicas.</p>
+      <p>¿Que es SAMPU?, es un Sistemas de Adiestramiento Matematico Pre Universitario, el cual cuenta con muchos ejercicios en distintos niveles de dificultad y temas, el cual se adapta a tu nivel de conocimiento y te sugiere ejercicios que se adapten a tus necesidates y ayudarte a mejorar tus habilidades en la matematicas pre universitarias</p>
       </h4>
   </section>
 
@@ -32,7 +32,7 @@
             <span class="info-box-icon bg-blue"><i class="ion ion-stats-bars"></i></span>
             <div class="info-box-content">
               <span class="info-box-text">Progreso total</span>
-              <span class="info-box-number">aqui va algo</span>
+              <span class="info-box-number">{{ estudiante.progreso }}</span>
             </div><!-- /.info-box-content -->
           </div><!-- /.info-box -->
         </div>
@@ -48,10 +48,10 @@
         <div class="col-xs-12">
           <div class="box box-primary">
           <div class="box-body">
-            <h4 class="text-center">Top 10 en Progreso</h4>
+            <h4 class="text-center">Top 5 en Progreso</h4>
             <ul class="list-group list-group-unbordered">
               {% for item in estudiantes %}
-              <li class="list-group-item"><b>{{item.usuario.username}}</b> <a class="pull-right">1,322</a></li>
+              <li class="list-group-item"><b>{{item.usuario.username}}</b> <a class="pull-right">{{ item.progreso }}</a></li>
               {% endfor %}
             </ul>
             <a href="{{ path('practica_generate') }}" class=" bg-red btn btn-block"><b><i class="ion ion-play"></i> Practicar</b></a>
